--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header {
     background: #333;
     color: white;
     padding: 40px 20px;
-    margin: auto;
+    margin-bottom: 40px;
     text-align: center;
 }
 
